<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:layout_marginBottom="12dp"
            android:textSize="14sp"
            android:text="@string/intro_text" />

        <TextView style="@style/HeaderTextStyle"
            android:text="@string/question_1" />

        <TextView style="@style/QuestionTextStyle"
            android:id="@+id/q1_text"
            android:text="@string/q1_text" />

        <CheckBox style="@style/CheckBoxTextStyle"
            android:id="@+id/q1a1"
            android:text="@string/q1a1" />

        <CheckBox style="@style/CheckBoxTextStyle"
            android:id="@+id/q1a2"
            android:text="@string/q1a2"/>

        <CheckBox style="@style/CheckBoxTextStyle"
            android:id="@+id/q1a3"
            android:text="@string/q1a3" />

        <CheckBox style="@style/CheckBoxTextStyle"
            android:id="@+id/q1a4"
            android:text="@string/q1a4" />

        <TextView style="@style/HeaderTextStyle"
            android:text="@string/question_2" />

        <TextView style="@style/QuestionTextStyle"
            android:id="@+id/q2_text"
            android:text="@string/q2_text" />

        <RadioGroup
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton style="@style/RadioButtonTextStyle"
                android:id="@+id/q2a1"
                android:text="@string/q2a1" />
            <RadioButton style="@style/RadioButtonTextStyle"
                android:id="@+id/q2a2"
                android:text="@string/q2a2" />
        </RadioGroup>

        <TextView style="@style/HeaderTextStyle"
            android:text="@string/question_3" />

        <TextView style="@style/QuestionTextStyle"
            android:id="@+id/q3_text"
            android:text="@string/q3_text" />

        <EditText
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:hint="@string/q3_hint" />

        <TextView style="@style/HeaderTextStyle"
            android:text="@string/question_4" />

        <TextView style="@style/QuestionTextStyle"
            android:id="@+id/q4_text"
            android:text="@string/q4_text" />

        <RadioGroup
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton style="@style/RadioButtonTextStyle"
                android:id="@+id/q4a1"
                android:text="@string/q4a1" />
            <RadioButton style="@style/RadioButtonTextStyle"
                android:id="@+id/q4a2"
                android:text="@string/q4a2" />
            <RadioButton style="@style/RadioButtonTextStyle"
                android:id="@+id/q4a3"
                android:text="@string/q4a3" />
            <RadioButton style="@style/RadioButtonTextStyle"
                android:id="@+id/q4a4"
                android:text="@string/q4a4" />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:textColor="#ffffff"
            android:text="@string/submit_button"
            android:onClick="submitAnswers"/>

    </LinearLayout>
</ScrollView>